[gd_scene load_steps=3 format=3 uid="uid://7xhi2yt0p7ws"]

[ext_resource type="Script" uid="uid://cny5hal4ta8c3" path="res://test/level_border.gd" id="1_6sdoi"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uchsv"]

[node name="level_border" type="Node2D"]
script = ExtResource("1_6sdoi")
ground_enabled = true
ceiling_enabled = true
left_enabled = true
right_enabled = true

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(640, 720)

[node name="ground_collider" type="CollisionShape2D" parent="ground"]
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="ceiling" type="StaticBody2D" parent="."]
position = Vector2(640, 0)
rotation = 3.1415925

[node name="ceiling_collider" type="CollisionShape2D" parent="ceiling"]
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="left" type="StaticBody2D" parent="."]
position = Vector2(0, 360)
rotation = 1.5707963

[node name="left_collider" type="CollisionShape2D" parent="left"]
shape = SubResource("WorldBoundaryShape2D_uchsv")

[node name="right" type="StaticBody2D" parent="."]
position = Vector2(1280, 360)
rotation = 3.1415925

[node name="right_collider" type="CollisionShape2D" parent="right"]
rotation = 1.5707964
shape = SubResource("WorldBoundaryShape2D_uchsv")
